analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/duplicatedClasses.kt
class SomeClass {
    val prop = "abc"
}
class SomeClass {
    <expr>fun foo() {}</expr>
}